--- a/package.json
+++ b/package.json
@@ -25,26 +25,26 @@
     "src"
   ],
   "dependencies": {
-    "@paniclobster/eslint-config-next": "1.0.0",
-    "eslint-plugin-storybook": "0.6.11",
-    "typescript": "5.0.2"
+    "@paniclobster/eslint-config-next": "^1.0.1",
+    "eslint-plugin-storybook": "^0.6.12",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "@paniclobster/eslint-config-base": "1.0.0",
-    "@rushstack/eslint-patch": "1.2.0",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
-    "prettier": "2.8.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@paniclobster/eslint-config-base": "^1.0.2",
+    "@rushstack/eslint-patch": "^1.2.0",
+    "@types/node": "^20.1.7",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "eslint": "^8.40.0",
+    "prettier": "^2.8.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
-    "@rushstack/eslint-patch": "1.2.0",
-    "eslint": "8.36.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@rushstack/eslint-patch": "^1.2.0",
+    "eslint": "^8.40.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependenciesMeta": {
     "@rushstack/eslint-patch": {
